Some code improvements in the test.